# School-CppAssignments

./: .gitignore  CMakeLists.txt  README.md  cppNotes.md  main.cpp  test.cpp
homeworks/: b003-rectangle.cpp  b004-delivery.cpp  b005-car-fix.cpp  b006-gpa.cpp  b007-slot-machine.cpp  b008-gpa-letter-grade.cpp  b009-guessing-game.cpp  b010-factorial-recursion.cpp  b011-pass-by-reference.cpp  b012-complex-calc.cpp  b013-structs.cpp  b014-even-and-odds.cpp  b015-insertion-sort.cpp  b017-row-sum.cpp  b018-random-toss.cpp
projects/p01-yahtzee/: yahtzee.cpp
projects/p01-yahtzee/rand/: randcrack.cpp  randgen.cpp  yahtzee-randcrack.cpp  yahtzee-randgen.cpp
projects/p02-conway/: Board.cpp  Board.h  BoardWithCoins.cpp  BoardWithCoins.h  compile.sh  conway-utils.cpp  conway-utils.h  conway.cpp  conway.h  macros.h  utils.cpp  utils.h
projects/p02-conway-arrayfire/: conwayaf.cpp
projects/p02-conway-bitmap/: conwaybm.cpp
projects/p02-conway2d/: Board.cpp  Board.h  BoardWithCoins.cpp  BoardWithCoins.h  compile.sh  conway.cpp  crack.cpp  crack.h  macros.h  utils.cpp  utils.h
projects/p03-pitch-penny/: compile.sh  macros.h  pitch-penny.cpp  pitch-penny.h
projects/p04/: GUIConstnats.h  GameState.cpp  GameState.h  Window.cpp  Window.h  compile.sh  constants.h  game.h  gui.h  macros.h  main.cpp  main.h  utils.h
